Generify Class usages.
Change-Id: Ic0dfaf7968032453faaf8c98a9afb4b58f0cb814
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>